Subo rama submain con merges de todas las ramas