@@ -1,53 +1,34 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
- */
 package ie.interfazgrafica;
 
-import java.util.Random;
-import java.util.ArrayDeque;
-import java.util.Deque;
 import java.util.*;
 
-/**
- *
- * @author Mar
- */
 public class IEInterfazGrafica {
 
     // ==== HISTORIAL (últimas 5) ====
     private static final int HISTORIAL_MAX = 5;
-    private static final Deque<String> HISTORIAL = new ArrayDeque<>();
+    private static final List<String> HISTORIAL = new ArrayList<>();
 
-    // Guarda una entrada. Si ya hay 5, descarta la más vieja.
+    // ==== EVENTOS ESPECIALES (ataques supremos) ====
+    private static final List<String> eventosEspeciales = new ArrayList<>();
+
+    // Registrar evento especial (ataque supremo usado)
+    public static void registrarEventoEspecial(String evento) {
+        eventosEspeciales.add(evento);
+    }
+
+    // Guarda una entrada en el historial
     public static void guardarBatalla(String batalla) {
         if (HISTORIAL.size() == HISTORIAL_MAX) {
-            HISTORIAL.removeFirst();
+            HISTORIAL.remove(0); // saca la más vieja
         }
-        HISTORIAL.addLast(batalla);
+        HISTORIAL.add(batalla);
     }
 
-    // Muestra el historial con numeración al momento de listar
-    public static void mostrarHistorial() {
-        System.out.println("\n HISTORIAL MAS RECIENTE");
-        if (HISTORIAL.isEmpty()) {
-            System.out.println("(sin batallas registradas)");
-            return;
-        }
-        int i = 1;
-        for (String entrada : HISTORIAL) {
-            System.out.println("BATALLA NRO: " + (i++) + " - " + entrada);
-        }
-    }
-
-    /**
-     * @param args the command line arguments
-     */
     public static void main(String[] args) {
         Random rnd = new Random();
 
         Heroe heroe = new Heroe(
-                "Auron",
+                "Pumpi",
                 130 + rnd.nextInt(31),
                 24 + rnd.nextInt(9),
                 8 + rnd.nextInt(6),
@@ -55,102 +36,43 @@ public class IEInterfazGrafica {
         );
 
         Villano villano = new Villano(
-                "Nox",
+                "LordDark",
                 130 + rnd.nextInt(31),
                 24 + rnd.nextInt(9),
                 8 + rnd.nextInt(6),
                 30 + rnd.nextInt(71)
         );
 
-        System.out.println("ESTADO INICIAL");
-        System.out.println("Heroe: " + heroe);
-        System.out.println("Villano: " + villano);
-        System.out.println("\nComienza la batalla\n");
-
         Personaje actual = heroe;
         Personaje enemigo = villano;
         int turno = 1;
 
+        // ==== COMBATE ====
         while (heroe.estaVivo() && villano.estaVivo()) {
-            System.out.println("TURNO " + (turno++) + " - " + actual.getNombre());
             actual.aplicarEstadosAlInicioDelTurno();
-            if (!actual.estaVivo()) {
-                System.out.println(actual.getNombre() + " cayo por efectos persistentes");
-                break;
-            }
+            if (!actual.estaVivo()) break;
 
             actual.decidirAccion(enemigo);
 
-            if (!enemigo.estaVivo()) {
-                System.out.println("\n" + actual.getNombre() + " ha derrotado a " + enemigo.getNombre());
-                break;
-            }
+            if (!enemigo.estaVivo()) break;
 
             Personaje tmp = actual; actual = enemigo; enemigo = tmp;
-            System.out.println();
+            turno++;
         }
 
-        System.out.println("RESULTADO FINAL");
-        System.out.println("Vida del Heroe: " + heroe.getVida());
-        System.out.println("Vida del Villano: " + villano.getVida());
+        // ==== HISTORIAL ====
+        int turnosTotales = turno;
+        String ganador = heroe.estaVivo() ? heroe.getNombre() : villano.getNombre();
 
-        // ==== HISTORIAL: construir entrada y guardar ====
-        int turnosTotales = turno - 1; // porque en cada iteración se hizo (turno++)
-        String ganador;
-        if (heroe.estaVivo() == villano.estaVivo()) {
-            ganador = "Empate";
-        } else {
-            ganador = heroe.estaVivo() ? heroe.getNombre() : villano.getNombre();
-        }
+        String resumen = "Heroe: " + heroe.getNombre()
+                       + " | Villano: " + villano.getNombre()
+                       + " | Ganador: " + ganador
+                       + " | Turnos: " + turnosTotales;
 
-        StringBuilder sb = new StringBuilder();
-        sb.append("Heroe: ").append(heroe.getNombre())
-          .append(" | Villano: ").append(villano.getNombre())
-          .append(" | Ganador: ").append(ganador)
-          .append(" | Turnos: ").append(turnosTotales);
+        guardarBatalla(resumen);
 
-        guardarBatalla(sb.toString());
-        mostrarHistorial();
-
-        System.out.println("\n===== RESULTADO FINAL =====");
-        System.out.println("Heroe -> Vida: " + heroe.getVida());
-        System.out.println("Villano -> Vida: " + villano.getVida());
-
-        System.out.println("Armas invocadas por " + heroe.getNombre() + ":");
-        for (Arma a : heroe.getArmasInvocadas()) {
-            System.out.println("- " + a.getNombre());
-        }
-
-        System.out.println("Armas invocadas por " + villano.getNombre() + ":");
-        for (Arma a : villano.getArmasInvocadas()) {
-            System.out.println("- " + a.getNombre());
-
-
-        // ===== RANKING DE VIDA FINAL (solo cálculo y muestra, sin reporte) =====
-        List<Personaje> participantes = Arrays.asList(heroe, villano);
-
-        // Ordenar por vida descendente; si empatan, por nombre A–Z
-        participantes.sort(
-            Comparator.comparingInt(Personaje::getVida).reversed()
-                      .thenComparing(Personaje::getNombre)
-        );
-
-        System.out.println("\n--- RANKING DE VIDA FINAL ---");
-        int pos = 1;
-        for (Personaje p : participantes) {
-            String estado = p.getVida() > 0 ? "OK" : "KO";
-            // Si tu clase Personaje tiene getSupremosUsados(), mostramos ese dato; si no, podés quitar esa parte.
-            System.out.println(
-                pos++ + ") " + p.getNombre() +
-                " — Vida: " + p.getVida() +
-                " [" + estado + "]" +
-                " | Supremos usados: " + p.getSupremosUsados()
-            );
-
-        }
-
+        // ==== REPORTE FINAL ====
+        String reporte = Reportes.generar(heroe, villano, eventosEspeciales, HISTORIAL, turnosTotales);
+        System.out.println(reporte);
     }
-  }
 }
-
-
